# Smart-Lights-IoT

./: .gitignore  README.md  Raport de analiza - model 2021.docx
Smart-Lights-IoT-Project/: Buzzer.cpp  Buzzer.h  CMakeLists.txt  Lights.cpp  Lights.h  MqttSubscriber.cpp  MqttSubscriber.h  SmartLamp.cpp  SmartLamp.h  SmartLightController.cpp  SmartLightController.h  json_specification.txt  main.cpp  microwave_example.cpp
